request comment field
